--- a/home.css
+++ b/home.css
@@ -1676,7 +1676,7 @@
 }
 .home-container14 {
   width: 60%;
-  height: 362px;
+  height: auto;
   display: flex;
   align-self: center;
   margin-top: var(--dl-space-space-tenunits);
@@ -1730,6 +1730,16 @@
 }
 .home-text123 {
   margin-right: var(--dl-space-space-unit);
+}
+.home-container17 {
+  flex: 0 0 auto;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-start;
+  padding-top: var(--dl-space-space-doubleunit);
+  padding-bottom: var(--dl-space-space-doubleunit);
+  justify-content: flex-start;
 }
 .home-button {
   display: flex;
